@@ -19,13 +19,13 @@ package org.apache.solr.util;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.StringReader;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 
+import com.google.common.collect.ImmutableList;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.common.MapWriter;
 import org.apache.solr.common.util.CommandOperation;
@@ -39,6 +39,10 @@ import org.apache.solr.common.util.Utils;
 import org.junit.Assert;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
+import static java.util.Arrays.asList;
+import static org.apache.solr.common.cloud.ZkStateReader.COLLECTION_DEF;
+import static org.apache.solr.common.cloud.ZkStateReader.NRT_REPLICAS;
+import static org.apache.solr.common.cloud.ZkStateReader.NUM_SHARDS_PROP;
 import static org.apache.solr.common.util.Utils.fromJSONString;
 
 /**
@@ -47,12 +51,12 @@ import static org.apache.solr.common.util.Utils.fromJSONString;
 public class TestUtils extends SolrTestCaseJ4 {
   
   public void testJoin() {
-    assertEquals("a|b|c",   StrUtils.join(Arrays.asList("a","b","c"), '|'));
-    assertEquals("a,b,c",   StrUtils.join(Arrays.asList("a","b","c"), ','));
-    assertEquals("a\\,b,c", StrUtils.join(Arrays.asList("a,b","c"), ','));
-    assertEquals("a,b|c",   StrUtils.join(Arrays.asList("a,b","c"), '|'));
+    assertEquals("a|b|c",   StrUtils.join(asList("a","b","c"), '|'));
+    assertEquals("a,b,c",   StrUtils.join(asList("a","b","c"), ','));
+    assertEquals("a\\,b,c", StrUtils.join(asList("a,b","c"), ','));
+    assertEquals("a,b|c",   StrUtils.join(asList("a,b","c"), '|'));
 
-    assertEquals("a\\\\b|c",   StrUtils.join(Arrays.asList("a\\b","c"), '|'));
+    assertEquals("a\\\\b|c",   StrUtils.join(asList("a\\b","c"), '|'));
   }
 
   public void testEscapeTextWithSeparator() {
@@ -115,7 +119,7 @@ public class TestUtils extends SolrTestCaseJ4 {
     map.add( "test", 10 );
     SimpleOrderedMap<Integer> clone = map.clone();
     assertEquals( map.toString(), clone.toString() );
-    assertEquals( new Integer(10), clone.get( "test" ) );
+    assertEquals(Integer.valueOf(10), clone.get( "test" ) );
   
     Map<String,Integer> realMap = new HashMap<>();
     realMap.put( "one", 1 );
@@ -134,7 +138,7 @@ public class TestUtils extends SolrTestCaseJ4 {
     assertEquals( "one", map.getName(0) );
     map.setName( 0, "ONE" );
     assertEquals( "ONE", map.getName(0) );
-    assertEquals( new Integer(100), map.get( "one", 1 ) );
+    assertEquals(Integer.valueOf(100), map.get( "one", 1 ) );
     assertEquals( 4, map.indexOf( null, 1 ) );
     assertEquals( null, map.get( null, 1 ) );
 
@@ -152,8 +156,8 @@ public class TestUtils extends SolrTestCaseJ4 {
       } catch( UnsupportedOperationException ignored) {}
     }
     // the values should be bigger
-    assertEquals( new Integer(10), map.get( "one" ) );
-    assertEquals( new Integer(20), map.get( "two" ) );
+    assertEquals(Integer.valueOf(10), map.get( "one" ) );
+    assertEquals(Integer.valueOf(20), map.get( "two" ) );
   }
   
   public void testNumberUtils()
@@ -187,8 +191,8 @@ public class TestUtils extends SolrTestCaseJ4 {
       jbc.marshal((MapWriter) ew -> {
         ew.put("set-user", fromJSONString("{x:y}"));
         ew.put("set-user", fromJSONString("{x:y,x1:y1}"));
-        ew.put("single", Arrays.asList(fromJSONString("[{x:y,x1:y1},{x2:y2}]"), fromJSONString( "{x2:y2}")));
-        ew.put("multi", Arrays.asList(fromJSONString("{x:y,x1:y1}"), fromJSONString( "{x2:y2}")));
+        ew.put("single", asList(fromJSONString("[{x:y,x1:y1},{x2:y2}]"), fromJSONString( "{x2:y2}")));
+        ew.put("multi", asList(fromJSONString("{x:y,x1:y1}"), fromJSONString( "{x2:y2}")));
       }, baos);
     }
 
@@ -228,7 +232,7 @@ public class TestUtils extends SolrTestCaseJ4 {
   }
 
   public void testUtilsJSPath(){
-    
+
     String json = "{\n" +
         "  'authorization':{\n" +
         "    'class':'solr.RuleBasedAuthorizationPlugin',\n" +
@@ -246,6 +250,75 @@ public class TestUtils extends SolrTestCaseJ4 {
         "    '':{'v':4}}}";
     Map m = (Map) fromJSONString(json);
     assertEquals("x-update", Utils.getObjectByPath(m,false, "authorization/permissions[1]/name"));
-    
+
+  }
+  
+  public void testMapWriterIdx(){
+    String json = "{" +
+        "  'responseHeader':{" +
+        "    'status':0," +
+        "    'QTime':6752}," +
+        "  'success':{" +
+        "    '127.0.0.1:56443_solr':{" +
+        "      'responseHeader':{" +
+        "        'status':0," +
+        "        'QTime':4276}," +
+        "      'core':'corestatus_test_shard2_replica_n5'}," +
+        "    '127.0.0.1:56445_solr':{" +
+        "      'responseHeader':{" +
+        "        'status':0," +
+        "        'QTime':4271}," +
+        "      'core':'corestatus_test_shard1_replica_n1'}," +
+        "    '127.0.0.1:56446_solr':{" +
+        "      'responseHeader':{" +
+        "        'status':0," +
+        "        'QTime':5015}," +
+        "      'core':'corestatus_test_shard1_replica_n2'}," +
+        "    '127.0.0.1:56444_solr':{" +
+        "      'responseHeader':{" +
+        "        'status':0," +
+        "        'QTime':5033}," +
+        "      'core':'corestatus_test_shard2_replica_n3'}}}";
+    Map m = (Map) fromJSONString(json);
+
+    assertEquals("127.0.0.1:56443_solr", Utils.getObjectByPath(m,false, "success[0]/key"));
+    assertEquals("corestatus_test_shard2_replica_n5", Utils.getObjectByPath(m, false,asList("success[0]", "value", "core") ));
+    assertEquals(4276L, Utils.getObjectByPath(m, false,asList("success[0]", "value", "responseHeader", "QTime") ));
+
+    assertEquals("127.0.0.1:56444_solr", Utils.getObjectByPath(m,false, "success[3]/key"));
+    assertEquals("corestatus_test_shard2_replica_n3", Utils.getObjectByPath(m, false,asList("success[3]", "value", "core") ));
+    assertEquals(5033L, Utils.getObjectByPath(m, false,asList("success[3]", "value", "responseHeader", "QTime") ));
+
+    Map nodes = (Map) m.get("success");
+    m.put("success", (MapWriter) ew -> nodes.forEach((o, o2) -> ew.putNoEx((String) o,o2)));
+    assertEquals("127.0.0.1:56443_solr", Utils.getObjectByPath(m,false, "success[0]/key"));
+    assertEquals("corestatus_test_shard2_replica_n5", Utils.getObjectByPath(m, false,asList("success[0]", "value", "core") ));
+    assertEquals(4276L, Utils.getObjectByPath(m, false,asList("success[0]", "value", "responseHeader", "QTime") ));
+
+    assertEquals("127.0.0.1:56444_solr", Utils.getObjectByPath(m,false, "success[3]/key"));
+    assertEquals("corestatus_test_shard2_replica_n3", Utils.getObjectByPath(m, false,asList("success[3]", "value", "core") ));
+    assertEquals(5033L, Utils.getObjectByPath(m, false,asList("success[3]", "value", "responseHeader", "QTime") ));
+    final int[] count = {0};
+    NamedList nl = new NamedList(m);
+    nl._forEachEntry("success", (o, o2) -> count[0]++);
+    assertEquals(count[0], 4);
+  }
+
+  public void testMergeJson() {
+    Map<String, Object> sink = (Map<String, Object>) Utils.fromJSONString("{k2:v2, k1: {a:b, p:r, k21:{xx:yy}}}");
+    assertTrue(Utils.mergeJson(sink, (Map<String, Object>) Utils.fromJSONString("k1:{a:c, e:f, p :null, k11:{a1:b1}, k21:{pp : qq}}")));
+
+    assertEquals("v2", Utils.getObjectByPath(sink, true, "k2"));
+    assertEquals("c", Utils.getObjectByPath(sink, true, "k1/a"));
+    assertEquals("yy", Utils.getObjectByPath(sink, true, "k1/k21/xx"));
+    assertEquals("qq", Utils.getObjectByPath(sink, true, "k1/k21/pp"));
+    assertEquals("f", Utils.getObjectByPath(sink, true, "k1/e"));
+    assertEquals("b1", Utils.getObjectByPath(sink, true, "k1/k11/a1"));
+
+    sink = new HashMap<>();
+    sink.put("legacyCloud", "false");
+    assertTrue(Utils.mergeJson(sink, (Map<String, Object>) Utils.fromJSONString("collectionDefaults:{numShards:3 , nrtReplicas:2}")));
+    assertEquals(3L, Utils.getObjectByPath(sink, true, ImmutableList.of(COLLECTION_DEF, NUM_SHARDS_PROP)));
+    assertEquals(2L, Utils.getObjectByPath(sink, true, ImmutableList.of(COLLECTION_DEF, NRT_REPLICAS)));
   }
 }
